2005-08-21  Roland Illig  <roland.illig@gmx.de>

	* view.h: Rewrote it. All functions are preceded by a describing
	comment and the "extern" keyword.
	* fileloc.h: Newly added this file, which provides a place where
	all names of user specific configuration files are listed.
	* view.c (view_done): Reordered the statements in the
	destructor and added paragraph comments.
	* view.c (free_change_list): Renamed to
	view_hexedit_free_change_list.
	* view.c: The search string is managed by the WView, not as
	static variable in some functions.

2005-08-19  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added section headers. The functions are still
	somewhat unordered. Renamed some functions to fit into the
	view_*_cmd naming convention.

2005-08-18  Andrzej Zaborowski  <balrogg@gmail.com>

	* screen.c (string_file_name): Increased the buffer size to
	MC_MAXPATHLEN + 1 bytes to avoid filename truncation.

2005-08-18  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_move_up): Don't scroll up if it is not necessary.
	This fixes an inconsistency noted by Andrej Zebrowski on
	mc-devel.
	* view.c (view_move_down): Do nothing if we're already at the
	end of the file. This makes the cursor movement more consistent
	with the behavior of the <End> key.
	* view.c (regexp_search_cmd): Moved the code to save the changes
	of the hex editor out of this function, as it has nothing to do
	with regexp searching.
	* view.c (view_display_hex): Completely rewritten. Now the code
	distinguishes several phases (state selection, color selection,
	printing) and does not mix them wildly, as the previous code
	did.
	* view.c (view_display_text): Removed the (almost) unused
	variable boldflag.
	* view.c (struct WView): Renamed found_len to search_length.

2005-08-16  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_percent): Fixed coordinate computation.
	* view.c (view_place_cursor): Made the call to widget_move()
	look like the other calls.