@@ -1,3 +1,10 @@
+2005-08-22  Roland Illig  <roland.illig@gmx.de>
+
+	* view.c (struct WView): Renamed dpy_topleft to dpy_start, as it
+	does not always represent the top-left corner of the screen.
+	Replaced dpy_complete with dpy_end, the offset of the first byte
+	after the displayed region.
+
 2005-08-21  Roland Illig  <roland.illig@gmx.de>
 
 	* view.h: Rewrote it. All functions are preceded by a describing
